; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_gui_motif.c_suppress_dialog_mnemonics.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_gui_motif.c_suppress_dialog_mnemonics.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AnyKey = common dso_local global i32 0, align 4
@Mod1Mask = common dso_local global i32 0, align 4
@KeyPressMask = common dso_local global i32 0, align 4
@False = common dso_local global i32 0, align 4
@mnemonic_event = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @suppress_dialog_mnemonics to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @suppress_dialog_mnemonics(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %17

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @AnyKey, align 4
  %9 = load i32, i32* @Mod1Mask, align 4
  %10 = call i32 @XtUngrabKey(i32 %7, i32 %8, i32 %9)
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @KeyPressMask, align 4
  %13 = load i32, i32* @False, align 4
  %14 = load i64, i64* @mnemonic_event, align 8
  %15 = trunc i64 %14 to i32
  %16 = call i32 @XtRemoveEventHandler(i32 %11, i32 %12, i32 %13, i32 %15, i32 0)
  br label %17

17:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @XtUngrabKey(i32, i32, i32) #1

declare dso_local i32 @XtRemoveEventHandler(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
